DROOLS-719 - added Cargo WAS profile for Kie server, WLS profile fix closes #265